# pipeline

./: .classpath  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  Dockerfile  Download.html  EclipseEnvironmentSetupInstructions.md  Gemfile  Jenkinsfile  Makefile  README.md  Sitemap.html  Utils.pm  _config.yml  assembly-make.sh  bnd.bnd  build-doc.xml  build-properties.xml  build.gradle  build2.xml  documentation_contract.md  git-subrepo-merge  git-subrepo-status  gradle-eclipse.sh  gradle-install.sh  gradle-release.sh  gradle-test.sh  gradle.properties  group-eval.pl  index.html  main.mk  make-gradle-build.mk.sh  make-gradle-deps.mk.sh  make-gradle-pom.sh  make-maven-deps.mk.xsl  make_pom.rb  maven-build.xsl  mvn-eclipse.sh  (+19 more)
.bundle/: config
modules/sbs-braille-tables/: .gitignore  .gitrepo  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
modules/sbs-braille-tables/debian/: README  changelog  control  copyright  rules
modules/sbs-braille-tables/lib/: .gitignore  Makefile.am
modules/sbs-braille-tables/m4/: gnulib-cache.m4  gnulib-comp.m4
modules/sbs-braille-tables/pipeline/: pom.xml
modules/sbs-braille-tables/pipeline/src/main/resources/OSGI-INF/: sbs-braille-tables.xml
modules/sbs-braille-tables/src/: Makefile.am  sbs-code.cti  sbs-de-accents-reduced.mod  sbs-de-accents.mod  sbs-de-begendcaps.mod  sbs-de-core.mod_src  sbs-de-g1-core.mod_src  sbs-de-g2-core.mod_src  sbs-de-g2-place.mod_src  sbs-de-hyph-new.mod  sbs-de-hyph-old.mod  sbs-de-hyph-word.mod  sbs-de-letsign.mod  sbs-litdigit-upper.mod_src  sbs-special.cti  sbs-special.mod
modules/sbs-braille-tables/src/main/deb/DEBIAN/: control
modules/sbs-braille-tables/src/main/resources/tables/: sbs-de-accents-ch.mod  sbs-de-capsign.mod  sbs-de-core.mod_src  sbs-de-g0-core.mod_src  sbs-litdigit-lower.mod_src  sbs-special.cti  sbs-version.utb  sbs-wordsplit.dis  sbs.dis
modules/sbs-braille-tables/src/test/: check_all_tables.pl  check_combined_tables.pl
modules/sbs-braille-tables/tables/: .gitignore  Makefile.am  sbs-version.utb.in
modules/sbs-braille-tables/tests/: Makefile.am  check_all_tables.pl  check_combined_tables.pl
modules/sbs-braille-tables/utils/: Makefile.am  cleanHyphenation.py  cleanHyphenation_mod_src.py  convertToUtf8.sh  tab2lou.pl
modules/sbs-braille-tables/whitelist/: Makefile.am
(+22489 files in other folders)
