table_files =					\
	sbs-code.cti				\
	sbs-de-accents-ch.mod			\
	sbs-de-accents-reduced.mod		\
	sbs-de-accents.cti			\
	sbs-de-accents.mod			\
	sbs-de-begendcaps.mod			\
	sbs-de-capsign.mod			\
	sbs-de-core.mod_src			\
	sbs-de-core6.cti			\
	sbs-de-g0-core.mod_src			\
	sbs-de-g1-core.mod_src			\
	sbs-de-g2-core.mod_src			\
	sbs-de-g2-name.mod_src			\
	sbs-de-g2-place.mod_src			\
	sbs-de-hyph-new.mod			\
	sbs-de-hyph-none.mod			\
	sbs-de-hyph-old.mod			\
	sbs-de-hyph-word.mod			\
	sbs-de-letsign.mod			\
	sbs-litdigit-lower.mod_src		\
	sbs-litdigit-upper.mod_src		\
	sbs-numsign.mod				\
	sbs-special.cti				\
	sbs-special.mod				\
	sbs-whitespace.mod			\
	sbs-wordsplit.dis			\
	sbs.dis

EXTRA_DIST = $(table_files)

